# sidecar-on-dock

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: cliff.toml  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  discovery.rs  dock_monitor.rs  iokit_ffi.rs  launchd.rs  lib.rs  main.rs  sidecar.rs  sidecar_ffi.rs
tests/: config_test.rs  sidecar_test.rs
